--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,8 +1,8 @@
 .navbar {
   background: linear-gradient(
     90deg,
-    rgba(80, 3, 3, 0.897) 0%,
-    rgb(44, 44, 44) 100%
+    rgba(20, 20, 20, 0.897) 0%,
+    rgb(251, 251, 234) 100%
   );
   height: 80px;
   display: flex;
@@ -57,7 +57,7 @@
 
 .nav-links:hover {
   transition: all 0.2s ease-out;
-  text-shadow: 0px 3px 7px lightgrey;
+  text-shadow: 0px 3px 6px rgb(68, 68, 68);
 }
 
 .fa-bars {
