--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,5 +1,10 @@
 .footer-container {
-  background-color: #242424ad;
+  background-color: rgb(1, 59, 47);
+  background-image: linear-gradient(
+    to bottom,
+    rgba(184, 184, 184, 0.603),
+    rgb(27, 27, 27)
+  );
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
