--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,8 +1,9 @@
 .navbar {
+  background-color: rgb(0, 49, 39);
   background: linear-gradient(
-    90deg,
-    rgba(20, 20, 20, 0.897) 0%,
-    rgb(251, 251, 234) 100%
+    to right,
+    rgba(184, 184, 184, 0.603) 0%,
+    rgb(27, 27, 27, 0.897) 100%
   );
   height: 80px;
   display: flex;
@@ -10,6 +11,7 @@
   align-items: center;
   font-size: 1.3rem;
   position: sticky;
+  position: -webkit-sticky;
   top: 0;
   z-index: 999;
 }
@@ -57,7 +59,7 @@
 
 .nav-links:hover {
   transition: all 0.2s ease-out;
-  text-shadow: 0px 3px 6px rgb(68, 68, 68);
+  text-shadow: 0px 3px 6px rgb(42, 42, 42);
 }
 
 .fa-bars {
