--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -108,6 +108,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: all 0.4s ease-in-out;
+}
+.react-card:hover {
+  text-decoration: none;
+  transform: scale(1.1);
 }
 .react-text {
   text-align: center;
