--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -10,18 +10,16 @@
   justify-content: center;
   align-items: center;
   font-size: 1.3rem;
-  position: sticky;
-  position: -webkit-sticky;
   top: 0;
-  z-index: 999;
+  position: sticky;
 }
 
 .navbar-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 60px;
-  max-width: 1500px;
+  height: 50px;
+  max-width: 100%;
   font-family: "Permanent Marker", cursive;
 }
 
@@ -99,22 +97,9 @@
     z-index: 998;
   }
 
-  .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-    border-radius: 4px;
-  }
-
   .nav-links:hover {
     background-color: #fff;
     color: #242424;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    left: 2em;
   }
 
   .menu-icon {
