--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -25,8 +25,7 @@
 }
 
 .footer-subscription > p {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 .footer-subscription-heading {
