--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -2,16 +2,17 @@
   background-color: rgb(0, 49, 39);
   background: linear-gradient(
     to right,
-    rgba(184, 184, 184, 0.603) 0%,
-    rgb(27, 27, 27, 0.897) 100%
+    rgba(59, 59, 59, 0.603) 0%,
+    rgb(15, 15, 15, 0.897) 100%
   );
   height: 80px;
+  position: sticky;
   display: flex;
   justify-content: center;
   align-items: center;
+
   font-size: 1.3rem;
   top: 0;
-  position: sticky;
 }
 
 .navbar-container {
@@ -20,7 +21,8 @@
   align-items: center;
   height: 50px;
   max-width: 100%;
-  font-family: "Permanent Marker", cursive;
+
+  font-family: "Quicksand", sans-serif;
 }
 
 .navbar-logo {
