--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -21,7 +21,6 @@
   align-items: center;
   height: 50px;
   max-width: 100%;
-
   font-family: "Quicksand", sans-serif;
 }
 
@@ -30,8 +29,11 @@
   justify-self: start;
   margin-left: 2em;
   cursor: pointer;
-  text-decoration: none;
+
   font-size: 2rem;
+}
+.navbar-logo:hover {
+  text-decoration: none;
 }
 
 .nav-menu {
@@ -58,8 +60,9 @@
 }
 
 .nav-links:hover {
-  transition: all 0.2s ease-out;
+  transition: all 0.2s ease-in-out;
   text-shadow: 0px 3px 6px rgb(42, 42, 42);
+  text-decoration: none;
 }
 
 .fa-bars {
@@ -102,6 +105,7 @@
   .nav-links:hover {
     background-color: #fff;
     color: #242424;
+    text-decoration: none;
   }
 
   .menu-icon {
