--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,11 +1,8 @@
 .home-container {
   background-color: #a7a7a7e5;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
   font-family: "Quicksand", sans-serif;
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .first-row {
@@ -37,6 +34,9 @@
   justify-content: center;
   align-items: center;
 }
+.main-col-text {
+  font-size: 18px;
+}
 
 .second-row {
   min-height: 580px;
@@ -51,34 +51,41 @@
   justify-content: flex-start;
   padding-top: 2%;
 }
-.ext-text {
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  color: white;
-  font-size: 50px;
-  text-shadow: 0 5px 20px rgba(24, 24, 24, 0.945), 0 10px 20px #f3f3f3e0;
-}
-.ext-link {
-  text-decoration: none;
-}
-.ext-link:hover {
-  text-decoration: none;
-}
-.ext-text-holder {
-  min-height: 90px;
+
+.ext-but-holder {
+  min-height: 120px;
   width: 100%;
   background-color: #3b3b3be5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.ext-but {
+  border: none;
+  background-color: #007bff;
+  padding: 10px 30px;
+  color: white;
+  font-size: 2rem;
+  border-radius: 15px;
 }
 
 .third-row {
   min-height: 300px;
 }
 .third-row-container {
-  padding-top: 5%;
+  padding: 5% 0;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   text-align: center;
+}
+.Third-row-card {
+  transition: all 0.4s ease-in-out;
+}
+.Third-row-card:hover {
+  transform: scale(1.05);
 }
 .fourth-row {
   min-height: 400px;
@@ -97,13 +104,14 @@
   justify-content: space-around;
   align-items: center;
 }
+
 .react-card {
   max-width: 200px;
   min-height: 240px;
   margin: 2% 2% 2% 2%;
   border-radius: 15px;
   box-shadow: 0px 0px 10px rgba(46, 46, 46, 0.876);
-  background-color: rgba(236, 235, 234, 0.781);
+  background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,13 +120,19 @@
 }
 .react-card:hover {
   text-decoration: none;
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 .react-text {
   text-align: center;
 }
+.fourth-row-shadow-left {
+  box-shadow: 4px 4px 15px rgb(223, 223, 223);
+}
+.fourth-row-shadow-right {
+  box-shadow: -4px 4px 15px rgb(223, 223, 223);
+}
 .last-card {
-  box-shadow: 0 0 20px rgb(206, 206, 206);
+  box-shadow: 0 0 40px rgb(255, 255, 255);
   margin-bottom: 5%;
 }
 
@@ -130,7 +144,7 @@
   position: absolute;
   width: 100%;
 }
-.text {
+.fifth-row-text {
   min-height: 750px;
   position: relative;
   display: flex;
@@ -141,4 +155,12 @@
   text-shadow: 0 2px 12px rgb(66, 66, 66);
   font-family: "Quicksand", sans-serif;
   font-size: 1.4em;
+}
+.fifth-row-but {
+  border: none;
+  background-color: #007bff;
+  padding: 10px 20px;
+  color: white;
+  font-size: 2rem;
+  border-radius: 15px;
 }
