--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -53,3 +53,26 @@
   justify-content: space-around;
   align-items: flex-start;
 }
+
+.contact-subscription-container {
+  margin-bottom: 4% 0;
+  text-align: center;
+  font-weight: bold;
+  padding: 4% 0;
+  color: #fff;
+}
+
+.contact-subscription-container > p {
+  font-family: "Quicksand", sans-serif;
+  color: black;
+}
+
+.contact-subscription-heading {
+  margin-bottom: 24px;
+  font-size: 24px;
+}
+
+.contact-subscription-text {
+  margin-bottom: 24px;
+  font-size: 20px;
+}
