--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -6,36 +6,6 @@
     rgb(15, 15, 15)
   );
   padding: 4rem 0 2rem 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer-subscription {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-  margin-bottom: 24px;
-  padding: 24px;
-  color: #fff;
-}
-
-.footer-subscription > p {
-  font-family: "Quicksand", sans-serif;
-}
-
-.footer-subscription-heading {
-  margin-bottom: 24px;
-  font-size: 24px;
-}
-
-.footer-subscription-text {
-  margin-bottom: 24px;
-  font-size: 20px;
 }
 
 .footer-input {
@@ -51,50 +21,25 @@
 
 .footer-links {
   width: 100%;
-  max-width: 1000px;
+  text-align: center;
+}
+
+.footer-link {
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  font-size: 1.5rem;
   display: flex;
-  justify-content: center;
-}
-
-.footer-link-wrapper {
-  display: flex;
-}
-
-.footer-link-items {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 16px;
-  text-align: left;
-  width: 160px;
-  box-sizing: border-box;
-}
-
-.footer-link-items h2 {
-  margin-bottom: 16px;
-}
-
-.footer-link-items > h2 {
-  color: #fff;
-}
-
-.footer-link-items a {
-  color: #fff;
+  align-items: center;
   text-decoration: none;
-  margin-bottom: 0.5rem;
+  padding: 0.5rem 1rem;
+  height: 100%;
 }
 
-.footer-link-items a:hover {
-  color: #e9e9e9;
-  transition: 0.3s ease-out;
-}
-
-.footer-email-form h2 {
-  margin-bottom: 2rem;
-}
-
-.footer-input::placeholder {
-  color: #b1b1b1;
+.footer-link:hover {
+  transition: all 0.2s ease-in-out;
+  text-shadow: 0px 0px 6px rgb(42, 42, 42);
+  text-decoration: none;
+  color: #0019a7;
 }
 
 /* Social Icons */
@@ -154,14 +99,90 @@
     width: 100%;
   }
 
-  .footer-link-wrapper {
-    flex-direction: column;
-  }
-
   .social-media-wrap {
     flex-direction: column;
   }
 }
 
 @media screen and (max-width: 768px) {
+}
+
+/*sixth-row*/
+
+.sixth-row-1 {
+  margin: 4% 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.sixth-row-1-cells {
+  min-width: 160px;
+  min-height: 25px;
+  background-color: black;
+  box-shadow: 0 2px 15px white;
+  border: none;
+  border-radius: 10px;
+}
+
+.sixth-row-2 {
+  padding: 0 0 1% 0;
+  margin: 0 0 1% 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow: hidden;
+}
+
+.sixth-row-2-cells {
+  min-width: 25px;
+  margin: 0 65px 0 65px;
+  min-height: 60px;
+  background-color: black;
+  box-shadow: 0 2px 15px white;
+  border: none;
+  border-radius: 0 0 10px 10px;
+}
+
+.sixth-row-3 {
+  margin: 0 0 4% 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.footer-card {
+  min-height: 150px;
+
+  border-radius: 15%;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.4s ease-in-out;
+  box-shadow: 0 2px 15px rgba(255, 255, 255, 0.685);
+}
+.footer-card:hover {
+  text-decoration: none;
+  cursor: pointer;
+  transform: scale(1.05);
+}
+.footer-text {
+  text-align: center;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+
+  list-style: none;
+  text-align: center;
+
+  margin-right: 3rem;
 }
