--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -1,32 +1,29 @@
 .navbar {
-  background-color: rgb(0, 49, 39);
-  background: linear-gradient(
-    to right,
-    rgba(59, 59, 59, 0.603) 0%,
-    rgb(15, 15, 15, 0.897) 100%
-  );
   height: 80px;
-  position: sticky;
 
+  background-color: rgb(0, 49, 39);
+  background: linear-gradient(to right, rgb(246, 246, 246) 0%, #a7a7a7e5);
   font-size: 1.3rem;
-  top: 0;
+  z-index: 999999999;
 }
 
 .navbar-container {
+  width: 100%;
+  height: 80px;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
-  max-width: 100%;
+  background-color: rgb(0, 49, 39);
+  background: linear-gradient(to right, rgb(246, 246, 246) 0%, #a7a7a7e5);
   font-family: "Quicksand", sans-serif;
 }
 
 .navbar-logo {
-  color: #fff;
+  color: rgb(0, 0, 0);
   justify-self: start;
-  margin-left: 2em;
   cursor: pointer;
-
+  align-self: center;
   font-size: 2rem;
 }
 .navbar-logo:hover {
@@ -48,7 +45,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -58,8 +55,9 @@
 
 .nav-links:hover {
   transition: all 0.2s ease-in-out;
-  text-shadow: 0px 3px 6px rgb(42, 42, 42);
+  text-shadow: 0px 0px 6px rgb(42, 42, 42);
   text-decoration: none;
+  color: #0019a7;
 }
 
 .fa-bars {
