--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 .home-container {
-  background-color: #a7a7a7e5;
+  background-color: #b7b7b7;
   font-family: "Quicksand", sans-serif;
   scroll-behavior: smooth;
   overflow: hidden;
@@ -35,6 +35,7 @@
   align-items: center;
 }
 .main-col-text {
+  text-align: justify;
   font-size: 18px;
   margin-top: 5%;
 }
@@ -56,7 +57,8 @@
 .ext-but-holder {
   min-height: 120px;
   width: 100%;
-  background-color: #3b3b3be5;
+
+  background-color: #b7b7b7;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,12 +66,20 @@
 }
 
 .ext-but {
-  border: none;
-  background-color: #007bff;
+  border: solid 2px #6b6b6b;
+  background-color: #006766;
   padding: 10px 30px;
-  color: white;
+  color: #fff5ba;
   font-size: 2rem;
   border-radius: 15px;
+  transition: all 0.5s ease;
+}
+.ext-but:hover {
+  background-color: #fff5ba;
+  color: #006766;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 0px 0px 10px #006766;
 }
 
 .third-row {
@@ -78,19 +88,23 @@
 .third-row-container {
   padding: 5% 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  text-align: center;
 }
 .Third-row-card {
   transition: all 0.4s ease-in-out;
-  min-height: 470px;
+  box-shadow: 0px 0px 10px #006766;
 }
 .Third-row-card:hover {
-  transform: scale(1.05);
+  transform: scale(1.04);
+
+}
+.third-row-titles {
+  font-weight: bold;
 }
 .fourth-row {
   min-height: 400px;
+  margin-bottom: 50px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -109,13 +123,15 @@
 
 .react-card {
   min-height: 200px;
-  margin: 2% 2% 2% 2%;
+  margin: 2% 5% 2% 5%;
+  font-weight: bold;
+  border: solid 2px #6b6b6b;
   border-radius: 15px;
-  box-shadow: 0px 0px 10px rgba(46, 46, 46, 0.876);
+  box-shadow: 0px 0px 10px #006766;
   background-color: rgb(255, 255, 255);
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   transition: all 0.4s ease-in-out;
 }
@@ -127,26 +143,33 @@
   text-align: center;
 }
 .fourth-row-shadow-left {
+  border: solid 2px #b7b7b7;
   box-shadow: 4px 4px 15px rgb(223, 223, 223);
 }
 .fourth-row-shadow-right {
+  border: solid 2px #b7b7b7;
   box-shadow: -4px 4px 15px rgb(223, 223, 223);
 }
-.last-card {
+.fourth-eow-last-card {
+  border: solid 2px white;
   box-shadow: 0 0 40px rgb(255, 255, 255);
   margin-bottom: 5%;
 }
 
 .fifth-row {
   width: 100%;
-  min-height: 750px;
+  min-height: 100vh;
+  margin-bottom: 3%;
 }
+
 .vid-container {
   position: absolute;
   width: 100%;
 }
 .fifth-row-text {
-  min-height: 750px;
+  min-height: 100vh;
+  width: 100vw;
+  padding: 0 20% 0 20%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -158,12 +181,20 @@
   font-size: 1.4em;
 }
 .fifth-row-but {
-  border: none;
-  background-color: #007bff;
-  padding: 10px 20px;
-  color: white;
+  border: solid 2px #6b6b6b;
+  background-color: #fff5ba;
+  padding: 10px 30px;
+  color: #006766;
   font-size: 2rem;
   border-radius: 15px;
+  transition: all 0.5s ease;
+}
+.fifth-row-but:hover {
+  background-color: #006766;
+  color: #fff5ba;
+  cursor: pointer;
+  font-weight: bold;
+  box-shadow: 0px 0px 10px #006766;
 }
 
 @media screen and (max-width: 768px) {
