--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,22 +1,7 @@
 .footer-container {
   background-color: rgb(27, 27, 27);
-  background-image: linear-gradient(
-    to bottom,
-    rgba(59, 59, 59, 0.603),
-    rgb(15, 15, 15)
-  );
-  padding: 4rem 0 2rem 0;
-}
-
-.footer-input {
-  padding: 8px 20px;
-  border-radius: 2px;
-  margin-right: 10px;
-  outline: none;
-  border: none;
-  font-size: 18px;
-  margin-bottom: 16px;
-  border: 1px solid #fff;
+  background-image: linear-gradient(to bottom, #b7b7b7, #6b6b6b);
+  padding: 4rem 0 4rem 0;
 }
 
 .footer-links {
@@ -25,9 +10,9 @@
 }
 
 .footer-link {
-  color: rgb(255, 255, 255);
+  color: #fff5ba;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -37,70 +22,20 @@
 
 .footer-link:hover {
   transition: all 0.2s ease-in-out;
-  text-shadow: 0px 0px 6px rgb(42, 42, 42);
+  text-shadow: 0px 0px 6px #006766;
   text-decoration: none;
-  color: #0019a7;
+  color: #9dbdbc;
 }
 
-/* Social Icons */
-.social-icon-link {
-  color: #fff;
-  font-size: 24px;
+.totop-but {
 }
 
-.social-media {
-  max-width: 1000px;
-  width: 100%;
-}
-
-.social-media-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 90%;
-  max-width: 1000px;
-  margin: 40px auto 0 auto;
-}
-
-.social-icons {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 240px;
-}
-
-.social-logo {
-  color: #fff;
-  justify-self: start;
-  margin-left: 20px;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  display: flex;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-.website-rights {
-  color: #fff;
-  margin-bottom: 16px;
+.footer-year {
 }
 
 @media screen and (max-width: 820px) {
   .footer-links {
     padding-top: 2rem;
-  }
-
-  .footer-input {
-    width: 100%;
-  }
-
-  .btn {
-    width: 100%;
-  }
-
-  .social-media-wrap {
-    flex-direction: column;
   }
 }
 
@@ -120,8 +55,8 @@
 .sixth-row-1-cells {
   min-width: 160px;
   min-height: 25px;
-  background-color: black;
-  box-shadow: 0 2px 15px white;
+  background-color: #006766;
+  box-shadow: 0 2px 15px #006766;
   border: none;
   border-radius: 10px;
 }
@@ -140,8 +75,8 @@
   min-width: 25px;
   margin: 0 65px 0 65px;
   min-height: 60px;
-  background-color: black;
-  box-shadow: 0 2px 15px white;
+  background-color: #006766;
+  box-shadow: 0 2px 15px #006766;
   border: none;
   border-radius: 0 0 10px 10px;
 }
@@ -158,13 +93,13 @@
   min-height: 150px;
 
   border-radius: 15%;
-  background-color: rgb(255, 255, 255);
+  background-color: #fff5ba;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   transition: all 0.4s ease-in-out;
-  box-shadow: 0 2px 15px rgba(255, 255, 255, 0.685);
+  box-shadow: 0 0px 15px #006766;
 }
 .footer-card:hover {
   text-decoration: none;
@@ -173,6 +108,9 @@
 }
 .footer-text {
   text-align: center;
+  color: black;
+  font-weight: bold;
+  padding-top: 2%;
 }
 
 .links {
@@ -185,4 +123,20 @@
   text-align: center;
 
   margin-right: 3rem;
+}
+.totop-year-container {
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.totop-but {
+  color: #fff5ba;
+}
+.totop-but:hover {
+  text-decoration: none;
+}
+.footer-year {
+  display: block;
+  font-weight: bold;
+  padding-top: 2%;
 }
