--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,30 +14,30 @@
 }
 
 .home-side-col {
-  min-width: 35%;
+  min-width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.side-figures :nth-child(odd) {
+.side-figures :nth-child(n) {
   margin-left: 20px;
 }
-.side-figures :nth-child(even) {
-  margin-left: 20px;
-}
-.side-caption {
-  margin-left: 3%;
-}
+
 
 .home-main-col {
   max-width: 35%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
 }
 .main-col-text {
   text-align: justify;
+  width: 100%;
   font-size: 18px;
-  margin-top: 5%;
+  margin: 5% 0 5% 0;
 }
 
 .second-row {
@@ -97,7 +97,6 @@
 }
 .Third-row-card:hover {
   transform: scale(1.04);
-
 }
 .third-row-titles {
   font-weight: bold;
@@ -197,5 +196,23 @@
   box-shadow: 0px 0px 10px #006766;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 960px) {
+  .first-row {
+    flex-direction: column;
+    margin-top: 4%;
+  }
+  .home-main-col {
+    min-width: 95%;
+  }
+  .side-figures {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .side-figures :nth-child(n) {
+    margin-left: 0;
+    width: 95%;
+  }
+
 }
