--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -15,7 +15,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 49, 39);
   background: linear-gradient(to right, #6b6b6b 0%, #b7b7b7d5);
   font-family: "Quicksand", sans-serif;
   font-size: 1.3rem;
@@ -147,5 +146,8 @@
     background: #fff;
     color: #242424;
     transition: 250ms;
+  }
+  .navbar-logo {
+    font-size: 1rem;
   }
 }
