--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,19 @@
 .app {
   scroll-behavior: smooth;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  min-height: 600vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: sticky;
+  top: 45%;
+
 }
