--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -90,3 +90,27 @@
   margin-bottom: 24px;
   font-size: 20px;
 }
+
+@media screen and (max-width: 960px) {
+  .note-container {
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  .note-header {
+    margin: 4% 0 1% 0;
+    padding: 2% 0 2% 0;
+    font-size: 1.5rem;
+  }
+  .contact-input {
+    width: 350px;
+    height: 40px;
+    margin: 2% 0 2% 0;
+    padding: 1% 2% 1% 2%;
+  }
+  .contact-subscription-heading {
+    width: 95%;
+    font-size: 1.4rem;
+  }
+  
+}
