--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -26,12 +26,25 @@
 }
 
 /*theme changer */
+@keyframes showEffect {
+  0% {
+    display: none;
+    visibility: hidden;
+  }
+  100% {
+    display: block;
+    visibility: block;
+  }
+}
 .theme-changer {
+  animation-name: showEffect;
+  animation-iteration-count: 1;
+  animation-timing-function: step-end;
+  animation-duration: 1s;
   position: absolute;
-  left: 6%;
+  left: 5%;
   top: 14%;
-  position: fixed;
-  z-index: 999999999;
+  z-index: 9999999;
 }
 
 .switch {
@@ -287,7 +300,7 @@ input:checked + .slider:before {
     min-height: 200px;
     margin: 3% 0 5% 0;
   }
-  .ext-but-holder{
+  .ext-but-holder {
     width: 90%;
   }
   .ext-but {
