--- a/src/components/Works.css
+++ b/src/components/Works.css
@@ -14,16 +14,62 @@
 .work-container {
 
   padding: 5%;
-  background-color: rgba(77, 77, 77, 0.705);
+
 
   color: #ffd700;
 
   font-weight: bold;
   text-shadow: 0 0 5px #6b6b6b;
-  border-radius: 50%;
-  box-shadow: 0px 0px 5px rgba(41, 41, 41, 0.712);
   transition: all 0.3s ease-out;
 
+}
+
+
+
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 800px) {
+  .column {
+    -ms-flex: 50%;
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .column {
+    -ms-flex: 100%;
+    flex: 100%;
+    max-width: 100%;
+  }
 }
 
 @media screen and (max-width: 960px) {
